--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 
     <properties>
         <selenide.version>5.15.1</selenide.version>
-        <testng.version>7.1.0</testng.version>
+        <testng.version>7.0.0</testng.version>
+        <suiteXmlFile>src/test/resources/smoketest.xml</suiteXmlFile>
         <allure.version>2.10.0</allure.version>
         <aspectjweaver.version>1.9.1</aspectjweaver.version>
         <alluretestng.version>2.7.0</alluretestng.version>
@@ -31,6 +32,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M4</version>
                 <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+                    </suiteXmlFiles>
                     <argLine>
                         -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectjweaver.version}/aspectjweaver-${aspectjweaver.version}.jar
                         -Xmx256m
