--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <allure.version>2.10.0</allure.version>
         <aspectjweaver.version>1.9.1</aspectjweaver.version>
         <alluretestng.version>2.7.0</alluretestng.version>
+        <slf4j-simple.version>1.7.21</slf4j-simple.version>
+        <jaxb-api.version>2.3.0</jaxb-api.version>
     </properties>
 
     <groupId>org.example</groupId>
@@ -74,6 +76,16 @@
             <artifactId>allure-testng</artifactId>
             <version>${alluretestng.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j-simple.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${jaxb-api.version}</version>
         </dependency>
     </dependencies>
 </project>
